apps/jsp-testing-15-05/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsp-testing-15-05
  namespace: qa
  labels:
    backstage.io/kubernetes-id: jsp-testing-15-05
    environment: qa
spec:
  selector:
    app: jsp-testing-15-05
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jsp-testing-15-05-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: jsp-testing-15-05.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: jsp-testing-15-05
#             port:
#               number: 80
