apps/jsp-testing-15-05/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsp-testing-15-05
  namespace: qa
  labels:
    backstage.io/kubernetes-id: jsp-testing-15-05
    environment: qa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /jsp-testing-15-05-qa(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: jsp-testing-15-05
                port:
                  number: 80
